more tech edits

--- a/homepage/tech.html
+++ b/homepage/tech.html
@@ -15,7 +15,12 @@
                 <h2>Analysis</h2>
                 <div class="block">
                     <p class="text">
-                        Map of Life (MOL) aims to develop a conceptual and cyberinfrastructure framework for provisioning and improving reliable species geographic range information. To achieve this goal, MOL will provide a diversity of analyses that can be used to improve the knowledge of species ranges and facilitate spatially explicit wiki-style user range map quality control and data upload.  Through web browser applications and APIs running on front-end servers in the cloud, simple analyses will be exposed that allow the user to filter and combine point data, species habitat data, and environmental data to name a few. Longer running analyses will be deployed on either MOL back-end servers or run on external services (e.g. Google Earth Engine).   For example, a user may want to use a modeling algorithm to create a summary species distributional model based at fine-scale on a set of distributional and environmental datasets.   The combination of applications, APIs, and a flexible server architecture allows MOL to deliver data rapidly to consumers while providing a responsive toolkit for improving those data
+                        Map of Life (MOL) aims to develop a conceptual and cyberinfrastructure framework 
+                        for provisioning and improving reliable species geographic range information. 
+                        To achieve this goal, MOL will provide a diversity of analyses that can be used 
+                        to improve the knowledge of species ranges and facilitate spatially explicit 
+                        wiki-style user range map quality control and data upload.  Through web browser 
+                        applications and APIs running on front-end servers in the cloud, simple analyses will be exposed that allow the user to filter and combine point data, species habitat data, and environmental data to name a few. Longer running analyses will be deployed on either MOL back-end servers or run on external services (e.g. Google Earth Engine).   For example, a user may want to use a modeling algorithm to create a summary species distributional model based at fine-scale on a set of distributional and environmental datasets.   The combination of applications, APIs, and a flexible server architecture allows MOL to deliver data rapidly to consumers while providing a responsive toolkit for improving those data
                     </p>
                 </div>
                 <div class="links">
@@ -24,6 +29,7 @@
                     <div class="link"><a href="http://gbif.org">GBIF</a></div>
                     <div class="link"><a href="http://earthengine.googlelabs.com">Google Earth Engine</a></div>
                     <div class="link"><a href="http://vernet.org">VertNet</a></div>
+                    <div class="link"><a href="http://catalogueoflife.org">COL</a></div>
                 </div>
             </div>
             <div class="subject second">
@@ -90,7 +96,21 @@
                 <h2>User interface</h2>
                 <div class="overview">
                     <p>
-                        The MOL web application facilitates data exploration, visualization, and enhancement. The user interface is built using JavaScript, HTML5, and CSS and communicates with the MOL frontend using AJAX. It is highly modular and supports internationalization. While development is in its very early stages, the MOL web application provides an early glimpse at how users will search, add, and manage species layers in a mapping interface. User interface capabilities that support display and integration of more complex data-types are in development.
+                        The MOL web application facilitates data exploration, visualization, and enhancement. 
+                        The user interface is built using JavaScript, HTML5, and CSS and communicates with 
+                        the MOL frontend using AJAX. It is highly modular and supports internationalization. 
+                        While development is in its very early stages, the MOL web application provides an 
+                        early glimpse at how users will search, add, and manage species layers in a mapping 
+                        interface. User interface capabilities that support display and integration of more 
+                        complex data-types are in development.
+                    </p>
+                    <p>
+                        Although development is in very early stages, some elements of the user interface 
+                        have some prototypes in place. For example, at you can visualize an IUCN range map with 
+                        points discovered through GBIF for jaguar (Panthera onca) 
+                        <a href='http://prototype.mol-lab.appspot.com/map/animalia/species/panthera_onca'>here</a>.
+                        You can further explore some preliminary data by using the MOL search tool, 
+                        <a href='http://prototype.mol-lab.appspot.com/search'>here</a>.
                     </p>
                 </div>
                 <div class="links">
