more tech edits

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -98,7 +98,7 @@
             <div id="map_canvas"></div> 
             <div id="content_middle">
                 <div id="text_blocks">
-                    <div id="block_title">VISION:</div>
+                    <div id="block_title">VISION</div>
                     <p>
                     The geography of life on Earth lies at the heart of the
                         interaction between nature and human society with its need for natural
@@ -122,7 +122,7 @@
                         provide model-based integration, quantify uncertainty in individual
                         and integrated data types, and implement user feedback.
                     </p>
-                    <div id="block_title">MOL PRODUCTS:</div>
+                    <div id="block_title">MOL PRODUCTS</div>
                     <p>
                     MOL will mobilize and integrate all key information
                         about species’ ranges that is currently spread over different research
