--- a/homepage/index.html
+++ b/homepage/index.html
@@ -98,46 +98,50 @@
             <div id="map_canvas"></div> 
             <div id="content_middle">
                 <div id="text_blocks">
-                    <div id="block_title">VISION</div>
-                    <p>
-                    The geography of life on Earth lies at the heart of the
-                        interaction between nature and human society with its need for natural
-                        resources. As disasters such as hurricanes or oil spills strike or the
-                        climate changes, knowledge about the geography of biological diversity
-                        – the types of species inhabiting a certain area – is essential for
-                        informed and targeted action. Geographic data on species’
-                        distributions are critical for governments, agencies and companies
-                        seeking to make sound decisions about land management, health and
-                        climate change policies or species conservation. Geographic range maps
-                        are displayed in nature programs, zoos, and field guides to the
-                        broader public worldwide and have myriad uses from basic science to
-                        resource management, development and education.  Yet to date the
-                        availability and quality of species range maps remains shockingly
-                        dispersed and limited – in stark contrast with meter-level resolution
-                        remotely sensed environmental information which is accessible
-                        globally.  The time is now right to mobilize and, most importantly,
-                        integrate species distribution information at global scale for
-                        scientists and the public. The proposed “Map of Life” project will
-                        host all available types of information about species distributions,
-                        provide model-based integration, quantify uncertainty in individual
-                        and integrated data types, and implement user feedback.
-                    </p>
-                    <div id="block_title">MOL PRODUCTS</div>
-                    <p>
-                    MOL will mobilize and integrate all key information
-                        about species’ ranges that is currently spread over different research
-                        domains: expert opinion maps, surveys over defined extents, point
-                        observations (e.g. aggregated by GBIF) and voucher specimens, expert
-                        habitat preferences, and others.  Combined with high resolution
-                        (30-100m) remotely sensed data, a full statistical model-based
-                        integration will be performed that allows for different data types to
-                        complement each other.   The end result will be a knowledge-base of
-                        initially tens and ultimately hundreds of thousands of species
-                        distribution maps, along with a set of tools for querying, accessing,
-                        modifying, downloading and summarizing them. Maps will be easily
-                        re-provisioned in other applications such as Encyclopedia of Life
-                        (<a href="http://eol.org">eol.org</a>).
-                    </p>
+                    <div id="block">
+                        <div id="block_title">VISION</div>
+                        <p>
+                        The geography of life on Earth lies at the heart of the
+                            interaction between nature and human society with its need for natural
+                            resources. As disasters such as hurricanes or oil spills strike or the
+                            climate changes, knowledge about the geography of biological diversity
+                            – the types of species inhabiting a certain area – is essential for
+                            informed and targeted action. Geographic data on species’
+                            distributions are critical for governments, agencies and companies
+                            seeking to make sound decisions about land management, health and
+                            climate change policies or species conservation. Geographic range maps
+                            are displayed in nature programs, zoos, and field guides to the
+                            broader public worldwide and have myriad uses from basic science to
+                            resource management, development and education.  Yet to date the
+                            availability and quality of species range maps remains shockingly
+                            dispersed and limited – in stark contrast with meter-level resolution
+                            remotely sensed environmental information which is accessible
+                            globally.  The time is now right to mobilize and, most importantly,
+                            integrate species distribution information at global scale for
+                            scientists and the public. The proposed “Map of Life” project will
+                            host all available types of information about species distributions,
+                            provide model-based integration, quantify uncertainty in individual
+                            and integrated data types, and implement user feedback.
+                        </p>
+                    </div>
+                    <div id="block">
+                        <div id="block_title">MOL PRODUCTS</div>
+                        <p>
+                        MOL will mobilize and integrate all key information
+                            about species’ ranges that is currently spread over different research
+                            domains: expert opinion maps, surveys over defined extents, point
+                            observations (e.g. aggregated by GBIF) and voucher specimens, expert
+                            habitat preferences, and others.  Combined with high resolution
+                            (30-100m) remotely sensed data, a full statistical model-based
+                            integration will be performed that allows for different data types to
+                            complement each other.   The end result will be a knowledge-base of
+                            initially tens and ultimately hundreds of thousands of species
+                            distribution maps, along with a set of tools for querying, accessing,
+                            modifying, downloading and summarizing them. Maps will be easily
+                            re-provisioned in other applications such as Encyclopedia of Life
+                            (<a href="http://eol.org">eol.org</a>).
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
