more tech edits

--- a/homepage/tech.html
+++ b/homepage/tech.html
@@ -110,8 +110,13 @@
                     <p>
                         Although development is in very early stages, some elements of the user interface 
                         have some prototypes in place. For example, at you can visualize an IUCN range map with 
-                        points discovered through GBIF for jaguar (Panthera onca) 
+                        points discovered through GBIF for the jaguar (Panthera onca) 
                         <a href='http://prototype.mol-lab.appspot.com/map/animalia/species/panthera_onca'>here</a>.
+                        Note that only for some GBIF data we are currently (in red) visualizing 
+                        spatial uncertainty of points, something that will (in a modeled/probabilistic way) 
+                        be extended to all points. Of course users will be able to filter by year 
+                        range, data provider etc. In the coming months we will add several 
+                        other distribution data types and include expert maps for other vertebrate groups.
                         You can further explore some preliminary data by using the MOL search tool, 
                         <a href='http://prototype.mol-lab.appspot.com/search'>here</a>.
                     </p>
