more tech changes

--- a/homepage/tech.html
+++ b/homepage/tech.html
@@ -109,7 +109,7 @@
                     </p>
                     <p>
                         Although development is in very early stages, some elements of the user interface 
-                        have some prototypes in place. For example, at you can visualize an IUCN range map with 
+                        have some prototypes in place. For example, you can visualize an IUCN range map with 
                         points discovered through GBIF for the jaguar (Panthera onca) 
                         <a href='http://prototype.mol-lab.appspot.com/map/animalia/species/panthera_onca'>here</a>.
                         Note that only for some GBIF data we are currently (in red) visualizing 
