tech page cleanup

--- a/homepage/tech.html
+++ b/homepage/tech.html
@@ -31,7 +31,7 @@
                     </p>
                 </div>
                 <div class="links">
-                    <div class="link label">Key external projects</div>
+                    <div class="label">Key external projects</div>
                     <div class="link"><a href="http://iucn.org">IUCN</a></div>
                     <div class="link"><a href="http://gbif.org">GBIF</a></div>
                     <div class="link"><a href="http://earthengine.googlelabs.com">Google Earth Engine</a></div>
@@ -50,7 +50,7 @@
                     </p>
                 </div>
                 <div class="links">
-                    <div class="link label">Key external projects</div>
+                    <div class="label">Key external projects</div>
                     <div class="link"><a href="http://code.google.com/appengine/">Google App Engine</a></div>
                     <div class="link"><a href="http://memcached.org">Memcached</a></div>
                 </div>
@@ -63,7 +63,7 @@
                     </p>
                 </div>
                 <div class="links">
-                    <div class="link label">Key external projects</div>
+                    <div class="label">Key external projects</div>
                     <div class="link"><a href="http://couchdb.apache.org/">CouchDB</a></div>
                     <div class="link"><a href="http://postgresql.org">PostgreSQL</a></div>
                     <div class="link"><a href="http://postgis.refractions.net/">PostGIS</a></div>
@@ -81,7 +81,7 @@
                     </p>
                 </div>
                 <div class="links">
-                    <div class="link label">Key external projects</div>
+                    <div class="label">Key external projects</div>
                     <div class="link"><a href="http://celeryproject.org/">Celery</a></div>
                     <div class="link"><a href="http://mapnik.org/">Mapnik</a></div>
                 </div>
@@ -94,7 +94,7 @@
                     </p>
                 </div>
                 <div class="links">
-                    <div class="link label">Key external projects</div>
+                    <div class="label">Key external projects</div>
                     <div class="link"><a href="http://openid.net">OpenID</a></div>
                     <div class="link"><a href="http://json.org">JSON</a></div>
                 </div>
@@ -122,7 +122,7 @@
                     </p>
                 </div>
                 <div class="links">
-                    <div class="link label">Key external projects</div>
+                    <div class="label">Key external projects</div>
                     <div class="link"><a href="http://jquery.com">jQuery</a></div>
                     <div class="link"><a href="http://documentcloud.github.com/backbone/">Backbone.js</a></div>
                     <div class="link"><a href="http://code.google.com/apis/maps/index.html">Google Maps API</a></div>
