more tech changes

--- a/homepage/tech.html
+++ b/homepage/tech.html
@@ -53,6 +53,7 @@
                     <div class="label">Key external projects</div>
                     <div class="link"><a href="http://code.google.com/appengine/">Google App Engine</a></div>
                     <div class="link"><a href="http://memcached.org">Memcached</a></div>
+                    <div class="link"><a href="http://gdal.org">GDAL</a></div>
                 </div>
             </div>
             <div class="subject third">
@@ -67,7 +68,7 @@
                     <div class="link"><a href="http://couchdb.apache.org/">CouchDB</a></div>
                     <div class="link"><a href="http://postgresql.org">PostgreSQL</a></div>
                     <div class="link"><a href="http://postgis.refractions.net/">PostGIS</a></div>
-                    <div class="link"><a href="http://gdal.org">GDAL</a></div>
+                    <div class="link"><a href="http://nginx.net/">Nginx</a></div>
                 </div>
             </div>
             <div class="subject fourth">
@@ -83,6 +84,7 @@
                 <div class="links">
                     <div class="label">Key external projects</div>
                     <div class="link"><a href="http://celeryproject.org/">Celery</a></div>
+                    <div class="link"><a href="http://pylonshq.com/">Pylons</a></div>
                     <div class="link"><a href="http://mapnik.org/">Mapnik</a></div>
                 </div>
             </div>
@@ -126,7 +128,8 @@
                     <div class="link"><a href="http://jquery.com">jQuery</a></div>
                     <div class="link"><a href="http://documentcloud.github.com/backbone/">Backbone.js</a></div>
                     <div class="link"><a href="http://code.google.com/apis/maps/index.html">Google Maps API</a></div>
-                    <div class="link"><a href="dev.w3.org/html5/spec/Overview.html">HTML5</a></div>
+                    <div class="link"><a href="http://dev.w3.org/html5/spec/Overview.html">HTML5</a></div>
+                    <div class="link"><a href="www.css3.info/">CSS3</a></div>
                 </div>
             </div>
         </div>
