more tech changes

--- a/homepage/tech.html
+++ b/homepage/tech.html
@@ -99,6 +99,7 @@
                     <div class="label">Key external projects</div>
                     <div class="link"><a href="http://openid.net">OpenID</a></div>
                     <div class="link"><a href="http://json.org">JSON</a></div>
+                    <div class="link"><a href="http://www.python.org/">Python</a></div>
                 </div>
             </div>
             <div class="subject sixth">
