--- a/app/static/div.html
+++ b/app/static/div.html
@@ -158,7 +158,7 @@
   <body>
   <div class="mol-CenterController">
    
-    <button id="cancelAll">X</button>
+    <button id="cancelAll">close</button>
     
     <div class="mol-LayerControl-DataType widgetTheme">
           <div class="selectLabel">Select</div>
