bit more of search tool

--- a/app/static/div.html
+++ b/app/static/div.html
@@ -30,6 +30,12 @@
     font-size: 0.8em;
     color: rgb(240, 90, 100);
 }
+.mol-CenterController  button#restart{
+    margin: 5px;
+    float: left;
+    font-size: 0.8em;
+    color: rgb(90, 230, 100);
+}
 .mol-CenterController   button:hover{
     background-color: rgba(25, 25, 25, 1.0);
     cursor: pointer;
@@ -125,6 +131,7 @@
     margin: 0;
 }
 .mol-CenterController .mol-LayerControl-Results .result {
+    margin-bottom: 5px;
 }
 .mol-CenterController .mol-LayerControl-Results .result div{
     float: left;
@@ -158,6 +165,7 @@
   <body>
   <div class="mol-CenterController">
    
+    <button id="restart">restart</button>
     <button id="cancelAll">close</button>
     
     <div class="mol-LayerControl-DataType widgetTheme">
