bit more of search tool

--- a/app/static/div.html
+++ b/app/static/div.html
@@ -155,6 +155,8 @@
 .mol-CenterController .mol-LayerControl-Results .result a{
     color: #212121;
 }
+.mol-CenterController .mol-LayerControl-Results .result input[type=checkbox] {
+  }
 .mol-CenterController .mol-LayerControl-Results .navigation button{
     float: right;
     margin-right: 5px;
@@ -199,17 +201,17 @@
         <ul class="result widgetTheme">
             <div class="resultName">Puma concolor <br/><div class="resultAuthor">(author)</div></div>
             <div class="resultLink"><a href="/static/dead_link.html">more info</a></div>
-            <button class="addResult">Add</button>
+            <input type="checkbox" class="addResult" name="result-1">
         </ul>
         <ul class="result widgetTheme">
             <div class="resultName">Puma yagouaroundi <br/><div class="resultAuthor">(author)</div></div>
             <div class="resultLink"><a href="/static/dead_link.html">more info</a></div>
-            <button class="addResult">Add</button>
+            <input type="checkbox" class="addResult" name="result-1">
         </ul>
         <ul class="result widgetTheme">
             <div class="resultName">Smilisca puma <br/><div class="resultAuthor">(author)</div></div>
             <div class="resultLink"><a href="/static/dead_link.html">more info</a></div>
-            <button class="addResult">Add</button>
+            <input type="checkbox" class="addResult" name="result-1">
         </ul>
       </ol>
       <div class="navigation">
