bit more of search tool

--- a/app/static/div.html
+++ b/app/static/div.html
@@ -215,7 +215,7 @@
         </ul>
       </ol>
       <div class="navigation">
-          <button class="addAll">Add All</button>
+          <button class="addAll">Add</button>
           <button class="nextPage">Next Page</button>
       </div>
     </div>
