--- a/homepage/tech.html
+++ b/homepage/tech.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div id="header">
-            <div id="title">The Map of Life <span id="subtitle">Technical Overview</span></div>
+            <div id="title">Map of Life <span id="subtitle">Technical Overview</span></div>
         </div>
         <div id="menu">
             <div class="link"><a href="#analysis">Analysis</a></div>
