more tech chnages

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -147,7 +147,7 @@
         </div>
         <div id="footer">
             <div id="footer_links">
-                
+                <a href="http://sites.google.com/site/robgur/">Guralnick Lab</a> | <a href="http://yale.edu/jetz">Jetz Lab</a>
             </div>
         </div>
     </body>
