--- a/homepage/tech.html
+++ b/homepage/tech.html
@@ -149,7 +149,7 @@
                     <div class="link"><a href="http://documentcloud.github.com/backbone/">Backbone.js</a></div>
                     <div class="link"><a href="http://code.google.com/apis/maps/index.html">Google Maps API</a></div>
                     <div class="link"><a href="http://dev.w3.org/html5/spec/Overview.html">HTML5</a></div>
-                    <div class="link"><a href="www.css3.info/">CSS3</a></div>
+                    <div class="link"><a href="http://www.css3.info/">CSS3</a></div>
                 </div>
             </div>
         </div>
