Split source files into modules which get dynamically loaded on browser load

--- a/app/html/map.html
+++ b/app/html/map.html
@@ -26,6 +26,7 @@
   <body>
 	<script type="text/javascript">
         $(document).ready(function() {   
+            MOL.src.load();
             <!-- MOL(function(env) { -->
             <!--    var app = new env.app.Instance({logging: true}); -->
             <!--    app.run(); -->
