--- a/app/static/div.html
+++ b/app/static/div.html
@@ -169,6 +169,7 @@
     float: left;
 	width:24px;
 	height:24px;
+    cursor: pointer;
     
 }
 .mol-CenterController .mol-LayerControl-Results .result .customCheck:after{
