--- a/app/static/div.html
+++ b/app/static/div.html
@@ -85,7 +85,7 @@
 }
 
 .mol-CenterController .mol-LayerControl-Search .searchSource{
-    width: auto;
+    width: 80px;
     margin: 2px;
     font-size: 1.1em;
     font-weight:700;
@@ -103,6 +103,7 @@
     -webkit-box-shadow: 0px 0px 5px rgb(188, 33, 255);  
     -moz-box-shadow: 0px 0px 5px rgb(188, 33, 255);  
     box-shadow: 0px 0px 5px rgb(188, 33, 255);  
+    width: 130px;
 }
 
 
