--- a/app/html/map.html
+++ b/app/html/map.html
@@ -3,6 +3,7 @@
   <head>    
     <link href="http://fonts.googleapis.com/css?family=Josefin+Sans" rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="../../../css/mol.css">
+    <link rel="stylesheet" href="../../../css/center-controller.css">
     <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
 
     <!-- All this JS will be compiled down to a single source in production -->
