search api fixes

--- a/app/static/search.html
+++ b/app/static/search.html
@@ -231,11 +231,11 @@ button#restart img{
                 <span class="customCheck"></span> 
             </div> 
         </ul>
-        <ul class="navigation">
+      </ol>
+        <div class="navigation">
           <button class="addAll">Add</button>
           <button class="nextPage">Next Page</button>
-        </ul>
-      </ol>
+        </div>
     </div>
     
     
