--- a/app/static/search.html
+++ b/app/static/search.html
@@ -10,186 +10,20 @@
     color: #141414;
     font-size: 14px;
 }
-.widgetTheme{
-    background-image: -webkit-gradient(
-        linear,
-        left bottom,
-        left top,
-        color-stop(0.37, rgba(184, 233, 133,0.65)),
-        color-stop(0.69, rgba(92,194,7,0.65))
-    );
-    background-image: -moz-linear-gradient(
-        center bottom,
-        rgba(184, 253, 133,0.65) 37%,
-        rgba(92,214,7,0.65) 69%
-    );
-    -webkit-box-shadow: rgba(0, 0, 0, 0.347656) 2px 2px 3px; 
-    -moz-box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.347656);
-    box-shadow: rgba(0, 0, 0, 0.347656) 2px 2px 3px; 
-}
-button{
-    float: left;
-    width: auto;
-    margin: 2px;
-    font-size: 1.1em;
-    font-weight:700;
-    color: rgb(240, 240, 260);
-    background-color: rgba(25, 25, 25, 0.75);
-    -moz-box-shadow: 2px 2px 5px #000;
-    -webkit-box-shadow: 2px 2px 5px #000;
-    box-shadow: 2px 2px 5px #222;
-    -moz-border-radius: 3px;
-    border-radius: 3px;
-    border: none;
-}
-button:hover{
-    background-color: rgba(25, 25, 25, 1.0);
-    cursor: pointer;
-}
-button#cancelAll{
-    margin: 5px;
-    margin-right: 5px;
-    float: left;
-    font-size: 0.9em;
-    color: rgb(240, 90, 100);
-}
-button#restart{
-    float: left;
-    margin-left: 5px;
-}
-button#restart img{
-    height: 12px;
-}
-
-
-.mol-LayerControl-Search {
-    padding: 2px 5px 2px 5px;
-    margin-bottom: 5px;
-    float: left;
-    position: relative;
-    -moz-border-radius: 4px;
-    border-radius: 4px;
-}
-.mol-LayerControl-Search .title{
-    float: left;
-    line-height: 25px;
-    font-size: 1.1em;
-}
-.mol-LayerControl-Search .source{
-    float: left;
-    padding-top: 3px;
-    font-weight: 600;
-    color: rgba(25, 25, 25, 0.85);
-    background-color: rgba(25, 25, 25, 0.01);
-    -moz-box-shadow: 2px 2px 5px #000;
-    -webkit-box-shadow: 2px 2px 5px #000;
-    box-shadow: 2px 2px 5px #222;
-    -moz-border-radius: 3px;
-    border-radius: 3px;
-    border: none;
-}
-
-.mol-LayerControl-Search .value{
-    float: left;
-    margin-right: 2px;
-}
-.mol-LayerControl-Search .execute{
-    float: left;
-    margin-right: 5px;
-}
-.mol-LayerControl-Results{
-    list-style-type: none;
-    width: 100%;
-    float: left;
-    padding: 5px;
-    margin: 0;
-    text-align: left;
-    -moz-border-radius: 5px;
-    border-radius: 5px;
-    outline: none;
-    position: relative;
-}
-.mol-LayerControl-Results ol{
-    list-style-type: none;
-    padding: 0px;
-    margin: 0px;
-    width: 100%;
-    float: left;
-    padding-top: 10px;
-    position: relative;
-}
-.mol-LayerControl-Results ul {
-    margin-bottom: 5px;
-    text-align: left;
-    width: 100%;
-    float: left;
-    position: relative;
-}
-.mol-LayerControl-Results .result div.resultName{
-    width: 58%;
-    float: left;
-}
-.mol-LayerControl-Results .result .resultAuthor{
-    font-size: 0.8em;
-    margin-top: -4px;
-}
-.mol-LayerControl-Results .result div.resultLink{
-    width: 25%;
-    font-size: 0.9em;
-    padding-top: 1%;
-    float: left;
-}
-.mol-LayerControl-Results .result a{
-    color: #212121;
-}
-.mol-LayerControl-Results .result .buttonContainer {
-	width:24px;
-	height:24px;
-    position: relative;
-    float: left;
-}
-.mol-LayerControl-Results .result .checkbox {
-    opacity: 0.0;
-	position:absolute;
-	left:0;
-	z-index:100;
-    float: left;
-	width:24px;
-	height:24px;
-    cursor: pointer;
-    
-}
-.mol-LayerControl-Results .break{
-    float: left;
-    width: 100%;
-    height: 1px;
-    border-bottom: 1px solid rgba(11,11,11,0.3);
-    margin-bottom: 2px;
-}
-.mol-LayerControl-Results .result .customCheck:after{
-	content:url('/static/unchecked.png');
-	position:absolute;
-    left: 0;
-}
-.mol-LayerControl-Results .result .checkbox:checked + .customCheck:after {
-	content:url('/static/checked.png');
-}
-.mol-LayerControl-Results .navigation{
-    width: 100%;
-    float: right;
-    margin-top: 5px;
-    margin-right: 8px;
-}
-.mol-LayerControl-Results .navigation button{
-    float: right;
-    margin-right: 8px;
-}
     </style>
+        <link href="/css/widgets.css" media="screen" rel="stylesheet" type="text/css" /> 
   </head>
   <body>
   <div class="mol-CenterController">
+   <div class="mainSearchNavigation">
+       <button id="searchCancel">
+            <img src="/static/cancel.png" />
+       </button>
+       <button id="searchRestart">
+            <img src="/static/reload.png" />
+       </button>
+   </div>
    
-    <button id="cancelAll">x</button>
    <div class="mol-LayerControl-Search widgetTheme">
       <div class="title">Search:</div>
       <select name="source" class="source">
@@ -199,9 +33,6 @@ button#restart img{
       <input class="value" type="text" />
       <button class="execute">Go</button>
    </div>
-   <button id="restart">
-    <img src="/static/reload.png" />
-   </button>
    
     <div class="mol-LayerControl-Results">
       <ol class="searchResults widgetTheme">
