--- a/homepage/test.html
+++ b/homepage/test.html
@@ -94,7 +94,7 @@
     </head>
     <body>
         <div id="header">
-            <div id="title">Map of Life</div>
+            <div id="title"><img src="/images/header.png"></div>
             <div id="subtitle">infrastructure for integrating global species knowledge</div>
             <div id="menu">
                 <div class="item"><a href="/" class="current">Home</a></div>
