--- a/homepage/test.html
+++ b/homepage/test.html
@@ -95,7 +95,7 @@
     <body>
         <div id="header">
             <div id="title"><img src="/images/header.png"></div>
-            <div id="subtitle">infrastructure for integrating global species knowledge</div>
+            <div id="subtitle">building species knowledge infrastructure</div>
             <div id="menu">
                 <div class="item"><a href="/" class="current">Home</a></div>
                 <div class="item"><a href="/">Tech</a></div>
