finished my second draft of the homepage

--- a/homepage/demo.html
+++ b/homepage/demo.html
@@ -49,66 +49,21 @@
             <div id="title">Map of Life</div>
             <div id="subtitle">integrating species knowledge infrastructure</div>
             <div id="menu">
-                <div class="item"><a href="/" class="current">Home</a></div>
+                <div class="item"><a href="/" >Home</a></div>
                 <div class="item" id="techLink"><a href="/tech.html">Tech</a></div>
-                <div class="item"><a href="/demo.html">Demo</a></div>
+                <div class="item"><a class="current" href="/demo.html">Demo</a></div>
                 <div class="item"><a href="/people.html">People</a></div>
             </div>
         </div>
             <div id="container">
                 <div id="top">
                     <div class="topQuote"> 
-                        By bringing together all types of information about species 
-                        distributions, providing model-based integration,
-                        and providing a system for users build upon our knowledge, 
-                        the Map of Life project hopes support our community in 
-                        understanding and saving the world's biodiversity.
-                        <span class="aboutLink"><a href="/about.html">more about MOL</a></span>
+                        Here we'll have a demo soon.
                     </div>
-                    <div class="topBackground" ><img src="/images/tech-reverse.gif"></div>
                 </div>
                 <div id="middle">
-                    <img class="turtle" src="/images/turtle.png">
-                    <img class="placemark small" src="/images/placemark.png">
-                    <img class="placemark medium" src="/images/placemark.png">
-                    <img class="placemark big" src="/images/placemark.png">
-                    <span class="horizontalDivider"></span>
-                    <div class="middleQuote">
-                        The end result will be a knowledge-base of initially tens 
-                        and ultimately hundreds of thousands of species distribution 
-                        maps, along with a set of tools for querying, accessing, 
-                        modifying, downloading and summarizing them.
-                    </div>
                 </div>
                 <div id="content">
-                    <div class="wrapper">
-                        <div id="left">
-                            <div class="details">
-                                <div class="pretitle">HIGHLIGHT</div>
-                                <div class="title">MAP OF LIFE BLOG</div>
-                                <div class="description">
-                                    The MOL team is rapidly developing many features and 
-                                    new technologies. While we are not ready to roll out 
-                                    all the features, you can follow our blog to learn 
-                                    what we are up to and provide valuable feedback and 
-                                    insights into the work we are doing.
-                                </div>
-                            </div>
-                            <div id="blog"></div>
-                        </div>
-                        <div id="right">
-                            <div class="details">
-                                <div class="pretitle">HIGHLIGHT</div>
-                                <div class="title">CODE DEVELOPMENT</div>
-                                <div class="description">
-                                    For those of you in the code-development community, 
-                                    MOL is a fully open-source project. Feel free to watch 
-                                    and discuss our progress.
-                                </div>
-                            </div>
-                            <div id="code"></div>
-                        </div>
-                    </div>
                 </div>
             </div>
         <div id="footer"> 
