--- a/homepage/tech.html
+++ b/homepage/tech.html
@@ -4,13 +4,22 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /> 
         <title>Map of Life</title> 
         <link href="/stylesheets/tech.css" media="screen" rel="stylesheet" type="text/css" /> 
+        <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu">
+        <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Coda">
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script> 
     </head>
     <body>
         <div id="header">
-            <div id="title">Map of Life <span id="subtitle">Technical Overview</span></div>
+            <div id="title">Map of Life</div>
+            <div id="subtitle">integrating species knowledge infrastructure</div>
+            <div id="menu">
+                <div class="item"><a href="/" >Home</a></div>
+                <div class="item" id="techLink" ><a class="current" href="/tech.html">Tech</a></div>
+                <div class="item"><a href="/demo.html">Demo</a></div>
+                <div class="item"><a href="/people.html">People</a></div>
+            </div>
         </div>
-        <div id="menu">
+        <div id="submenu">
             <div class="link"><a href="#analysis">Analysis</a></div>
             <div class="link"><a href="#dataDiversity">Data Diversity</a></div>
             <div class="link"><a href="#scalability">Scalability</a></div>
