made fonts larger in most divs

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -103,7 +103,7 @@
                                 <div class="description">
                                     For those of you in the code-development community, 
                                     MOL is a fully open-source project. Feel free to watch 
-                                    and discuss our progress.
+                                    and discus our progress.
                                 </div>
                             </div>
                             <div id="code"></div>
